--- a/scss/mc/_style.scss
+++ b/scss/mc/_style.scss
@@ -418,7 +418,7 @@ a.pure-button-primary {
 .custom-wrapper.open {
   height: 12em;
   .pure-menu-link {
-    font-size: 1.25em;
+    font-size: .9em;
     padding-top: 0;
   }
 }
@@ -439,11 +439,11 @@ a.pure-button-primary {
 .custom-toggle .bar {
   background-color: #fff;
   display: block;
-  width: 48px;
+  width: 28px;
   height: 4px;
   border-radius: 100px;
   position: absolute;
-  top: 30px;
+  top: 37px;
   right: 7px;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
